--- a/module-1/pandas-project/your-code/pandas-project.ipynb
+++ b/module-1/pandas-project/your-code/pandas-project.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -334,8 +334,132 @@
     "\n",
     "Crearé una nueva columna `Sizes` donde guardaré los tamaños. Compararé el número de ataques y su mortalidad con los tamaños. Por lo tanto, la limpieza es sencilla: Para verificar mi hipótesis únicamente necesito las columnas tamaño y `Fatal (Y/N)`.\n",
     "\n",
-    "Antes de seleccionarlas, he analizado el dataset por años y he observado que los datos antiguos contienen inform\n"
+    "Para empezar, consultado el csv se observa que las columnas `Species` y `Sex` tienen un espacio después de la palabra. Normalizamos las columnas:"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.rename(index=str, columns={\"Sex \": \"Sex\", \"Species \": \"Species\"}, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Por otra parte, en la columna `Type` hay columnas con el valor *Invalid*. Consultando varios PDFs adjuntos en la columna `href`, se observa que dichos ataques son avisos falsos, mordeduras post-mortem o casos muy muy dudosos.\n",
+    "\n",
+    "Por tanto, decido borrar todos dichos datos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=df[df[\"Type\"] != \"Invalid\"].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Case Number                  0\n",
+      "Date                         0\n",
+      "Year                         0\n",
+      "Type                         0\n",
+      "Country                     38\n",
+      "Area                       358\n",
+      "Location                   445\n",
+      "Activity                   407\n",
+      "Name                       147\n",
+      "Sex                        494\n",
+      "Age                       2383\n",
+      "Injury                      20\n",
+      "Fatal (Y/N)                  5\n",
+      "Time                      2837\n",
+      "Species                   2655\n",
+      "Investigator or Source      12\n",
+      "pdf                          0\n",
+      "href formula                 1\n",
+      "href                         2\n",
+      "Case Number.1                0\n",
+      "Case Number.2                0\n",
+      "original order               0\n",
+      "Unnamed: 22               5472\n",
+      "Unnamed: 23               5472\n",
+      "dtype: int64\n",
+      "(5473, 24)\n"
+     ]
+    }
+   ],
+   "source": [
+    "null_cols = df.isnull().sum()\n",
+    "print(null_cols)\n",
+    "print(df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Case Number                  0\n",
+      "Date                         0\n",
+      "Year                         0\n",
+      "Type                         0\n",
+      "Country                     22\n",
+      "Area                       295\n",
+      "Location                   363\n",
+      "Activity                   425\n",
+      "Name                       158\n",
+      "Sex                        504\n",
+      "Age                       2091\n",
+      "Injury                      19\n",
+      "Fatal (Y/N)                  9\n",
+      "Time                      2624\n",
+      "Species                   2377\n",
+      "Investigator or Source      13\n",
+      "pdf                          0\n",
+      "href formula                 1\n",
+      "href                         2\n",
+      "Case Number.1                0\n",
+      "Case Number.2                0\n",
+      "original order               0\n",
+      "Unnamed: 22               5310\n",
+      "Unnamed: 23               5310\n",
+      "dtype: int64\n",
+      "(5311, 24)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#df=df[df[\"Year\"]>1900].copy()\n",
+    "\n",
+    "null_cols_2 = df.isnull().sum()\n",
+    "print(null_cols_2)\n",
+    "print(df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
