Comenzado a crear el documento de entrega

--- a/module-1/pandas-project/your-code/pandas-project.ipynb
+++ b/module-1/pandas-project/your-code/pandas-project.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -255,6 +255,7 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "import re\n",
     "\n",
     "df = pd.read_csv(\"./GSAF5.csv\", encoding=\"latin1\")\n",
     "display(df.head())\n",
@@ -320,7 +321,7 @@
     "\n",
     "La hipótesis que quiero comprobar es:\n",
     "\n",
-    "> Los tiburones pequeños son más peligrosos\n",
+    "    Los tiburones pequeños son más peligrosos\n",
     "\n",
     "La base de datos no tiene una columna de tamaño. Sin embargo, la columna `Species` contiene en muchas filas información sobre el tamaño del tiburón que ha mordido.\n",
     "\n",
@@ -339,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -409,49 +410,382 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Limpieza de la columna `Species`\n",
+    "\n",
+    "Por otra parte, observo que hay algunos datos en la columna `Species` que recogen, en una sola fila, tiburones de varios tamaños. Como por ejemplo, las siguientes:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Case Number                  0\n",
-      "Date                         0\n",
-      "Year                         0\n",
-      "Type                         0\n",
-      "Country                     22\n",
-      "Area                       295\n",
-      "Location                   363\n",
-      "Activity                   425\n",
-      "Name                       158\n",
-      "Sex                        504\n",
-      "Age                       2091\n",
-      "Injury                      19\n",
-      "Fatal (Y/N)                  9\n",
-      "Time                      2624\n",
-      "Species                   2377\n",
-      "Investigator or Source      13\n",
-      "pdf                          0\n",
-      "href formula                 1\n",
-      "href                         2\n",
-      "Case Number.1                0\n",
-      "Case Number.2                0\n",
-      "original order               0\n",
-      "Unnamed: 22               5310\n",
-      "Unnamed: 23               5310\n",
-      "dtype: int64\n",
-      "(5311, 24)\n"
+      "(5, 24)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Two sharks seen in vicinity: 2.4 m & 4.25 m  [8' & 14'] TL    1\n",
+       "Said to involve 2 sharks: 5.2 m & 6 m [17' & 20']             1\n",
+       "4.5 m & 5 m white shark                                       1\n",
+       "2 scalloped hammerhead sharks, 1.5 m & 1.8 m [5' & 6']        1\n",
+       "2 sharks, 4.5 m & 3 m                                         1\n",
+       "Name: Species, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "#df=df[df[\"Year\"]>1900].copy()\n",
+    "aux = df[(df[\"Species\"].str.contains(\"[\\d\\.]+\\sm\\s&\\s[\\d\\.]+\\sm|[\\d\\.]+\\s'\\s&\\s[\\d\\.]+\\s'\")==True)]\n",
+    "print(aux.shape)\n",
+    "aux[\"Species\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para poder contabilizar dichos ataques como 2, en vez de como uno solo, decido hacer los siguiente:\n",
     "\n",
-    "null_cols_2 = df.isnull().sum()\n",
-    "print(null_cols_2)\n",
-    "print(df.shape)"
+    "* Añado dos filas al final de mi dataframe que son copias de la fila con dos ataques.\n",
+    "* Les cambio el valor de la fila `Species` por los dos tamaños diferentes.\n",
+    "* Borro de mi dataset la fila con el valor duplicado.\n",
+    "\n",
+    "Esto lo he hecho con una función al que le enviamos el dataframe a modificar, la columna afectada y una expresión regular que saca por grupos los valores que queremos duplicar."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5473, 24)\n",
+      "(5476, 24)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib/python3/dist-packages/ipykernel_launcher.py:8: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5478, 24)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Case Number</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Area</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Activity</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Species</th>\n",
+       "      <th>Investigator or Source</th>\n",
+       "      <th>pdf</th>\n",
+       "      <th>href formula</th>\n",
+       "      <th>href</th>\n",
+       "      <th>Case Number.1</th>\n",
+       "      <th>Case Number.2</th>\n",
+       "      <th>original order</th>\n",
+       "      <th>Unnamed: 22</th>\n",
+       "      <th>Unnamed: 23</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5474</th>\n",
+       "      <td>1959.01.17.b</td>\n",
+       "      <td>17-Jan-59</td>\n",
+       "      <td>1959</td>\n",
+       "      <td>Unprovoked</td>\n",
+       "      <td>AUSTRALIA</td>\n",
+       "      <td>Tasmania</td>\n",
+       "      <td>Safety Cove</td>\n",
+       "      <td>In deep water about 100 yards from his ship</td>\n",
+       "      <td>Brian Derry, a Naval Rating</td>\n",
+       "      <td>M</td>\n",
+       "      <td>...</td>\n",
+       "      <td>20'</td>\n",
+       "      <td>Odessa American, 1/19/1959; G.P. Whitley, ref ...</td>\n",
+       "      <td>1959.01.17.b-Derry.pdf</td>\n",
+       "      <td>http://sharkattackfile.net/spreadsheets/pdf_di...</td>\n",
+       "      <td>http://sharkattackfile.net/spreadsheets/pdf_di...</td>\n",
+       "      <td>1959.01.17.b</td>\n",
+       "      <td>1959.01.17.b</td>\n",
+       "      <td>2105</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5475</th>\n",
+       "      <td>2004.12.16</td>\n",
+       "      <td>16-Dec-04</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>Unprovoked</td>\n",
+       "      <td>AUSTRALIA</td>\n",
+       "      <td>South Australia</td>\n",
+       "      <td>West Beach, Adelaide</td>\n",
+       "      <td>Scurfing (surfboard being  towed behind a boat)</td>\n",
+       "      <td>Nick Peterson</td>\n",
+       "      <td>M</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.5 m</td>\n",
+       "      <td>P. Kemp &amp; T. Peake, GSAF</td>\n",
+       "      <td>2004.12.16-Peterson-draft.pdf</td>\n",
+       "      <td>http://sharkattackfile.net/spreadsheets/pdf_di...</td>\n",
+       "      <td>http://sharkattackfile.net/spreadsheets/pdf_di...</td>\n",
+       "      <td>2004.12.16</td>\n",
+       "      <td>2004.12.16</td>\n",
+       "      <td>4598</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5476</th>\n",
+       "      <td>2004.12.16</td>\n",
+       "      <td>16-Dec-04</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>Unprovoked</td>\n",
+       "      <td>AUSTRALIA</td>\n",
+       "      <td>South Australia</td>\n",
+       "      <td>West Beach, Adelaide</td>\n",
+       "      <td>Scurfing (surfboard being  towed behind a boat)</td>\n",
+       "      <td>Nick Peterson</td>\n",
+       "      <td>M</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5 m</td>\n",
+       "      <td>P. Kemp &amp; T. Peake, GSAF</td>\n",
+       "      <td>2004.12.16-Peterson-draft.pdf</td>\n",
+       "      <td>http://sharkattackfile.net/spreadsheets/pdf_di...</td>\n",
+       "      <td>http://sharkattackfile.net/spreadsheets/pdf_di...</td>\n",
+       "      <td>2004.12.16</td>\n",
+       "      <td>2004.12.16</td>\n",
+       "      <td>4598</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5477</th>\n",
+       "      <td>2004.07.10</td>\n",
+       "      <td>10-Jul-04</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>Unprovoked</td>\n",
+       "      <td>AUSTRALIA</td>\n",
+       "      <td>Western Australia</td>\n",
+       "      <td>Lefthanders Beach, Margaret River</td>\n",
+       "      <td>Surfing</td>\n",
+       "      <td>Bradley Adrian Smith</td>\n",
+       "      <td>M</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.5 m</td>\n",
+       "      <td>T. Peake, GSAF</td>\n",
+       "      <td>2004.07.10-BradSmith.pdf</td>\n",
+       "      <td>http://sharkattackfile.net/spreadsheets/pdf_di...</td>\n",
+       "      <td>http://sharkattackfile.net/spreadsheets/pdf_di...</td>\n",
+       "      <td>2004.07.10</td>\n",
+       "      <td>2004.07.10</td>\n",
+       "      <td>4560</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5478</th>\n",
+       "      <td>2004.07.10</td>\n",
+       "      <td>10-Jul-04</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>Unprovoked</td>\n",
+       "      <td>AUSTRALIA</td>\n",
+       "      <td>Western Australia</td>\n",
+       "      <td>Lefthanders Beach, Margaret River</td>\n",
+       "      <td>Surfing</td>\n",
+       "      <td>Bradley Adrian Smith</td>\n",
+       "      <td>M</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3 m</td>\n",
+       "      <td>T. Peake, GSAF</td>\n",
+       "      <td>2004.07.10-BradSmith.pdf</td>\n",
+       "      <td>http://sharkattackfile.net/spreadsheets/pdf_di...</td>\n",
+       "      <td>http://sharkattackfile.net/spreadsheets/pdf_di...</td>\n",
+       "      <td>2004.07.10</td>\n",
+       "      <td>2004.07.10</td>\n",
+       "      <td>4560</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 24 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Case Number       Date  Year        Type    Country               Area  \\\n",
+       "5474  1959.01.17.b  17-Jan-59  1959  Unprovoked  AUSTRALIA           Tasmania   \n",
+       "5475    2004.12.16  16-Dec-04  2004  Unprovoked  AUSTRALIA    South Australia   \n",
+       "5476    2004.12.16  16-Dec-04  2004  Unprovoked  AUSTRALIA    South Australia   \n",
+       "5477    2004.07.10  10-Jul-04  2004  Unprovoked  AUSTRALIA  Western Australia   \n",
+       "5478    2004.07.10  10-Jul-04  2004  Unprovoked  AUSTRALIA  Western Australia   \n",
+       "\n",
+       "                               Location  \\\n",
+       "5474                        Safety Cove   \n",
+       "5475               West Beach, Adelaide   \n",
+       "5476               West Beach, Adelaide   \n",
+       "5477  Lefthanders Beach, Margaret River   \n",
+       "5478  Lefthanders Beach, Margaret River   \n",
+       "\n",
+       "                                             Activity  \\\n",
+       "5474      In deep water about 100 yards from his ship   \n",
+       "5475  Scurfing (surfboard being  towed behind a boat)   \n",
+       "5476  Scurfing (surfboard being  towed behind a boat)   \n",
+       "5477                                          Surfing   \n",
+       "5478                                          Surfing   \n",
+       "\n",
+       "                             Name Sex  ... Species  \\\n",
+       "5474  Brian Derry, a Naval Rating   M  ...     20'   \n",
+       "5475                Nick Peterson   M  ...   4.5 m   \n",
+       "5476                Nick Peterson   M  ...     5 m   \n",
+       "5477         Bradley Adrian Smith   M  ...   4.5 m   \n",
+       "5478         Bradley Adrian Smith   M  ...     3 m   \n",
+       "\n",
+       "                                 Investigator or Source  \\\n",
+       "5474  Odessa American, 1/19/1959; G.P. Whitley, ref ...   \n",
+       "5475                           P. Kemp & T. Peake, GSAF   \n",
+       "5476                           P. Kemp & T. Peake, GSAF   \n",
+       "5477                                     T. Peake, GSAF   \n",
+       "5478                                     T. Peake, GSAF   \n",
+       "\n",
+       "                                pdf  \\\n",
+       "5474         1959.01.17.b-Derry.pdf   \n",
+       "5475  2004.12.16-Peterson-draft.pdf   \n",
+       "5476  2004.12.16-Peterson-draft.pdf   \n",
+       "5477       2004.07.10-BradSmith.pdf   \n",
+       "5478       2004.07.10-BradSmith.pdf   \n",
+       "\n",
+       "                                           href formula  \\\n",
+       "5474  http://sharkattackfile.net/spreadsheets/pdf_di...   \n",
+       "5475  http://sharkattackfile.net/spreadsheets/pdf_di...   \n",
+       "5476  http://sharkattackfile.net/spreadsheets/pdf_di...   \n",
+       "5477  http://sharkattackfile.net/spreadsheets/pdf_di...   \n",
+       "5478  http://sharkattackfile.net/spreadsheets/pdf_di...   \n",
+       "\n",
+       "                                                   href Case Number.1  \\\n",
+       "5474  http://sharkattackfile.net/spreadsheets/pdf_di...  1959.01.17.b   \n",
+       "5475  http://sharkattackfile.net/spreadsheets/pdf_di...    2004.12.16   \n",
+       "5476  http://sharkattackfile.net/spreadsheets/pdf_di...    2004.12.16   \n",
+       "5477  http://sharkattackfile.net/spreadsheets/pdf_di...    2004.07.10   \n",
+       "5478  http://sharkattackfile.net/spreadsheets/pdf_di...    2004.07.10   \n",
+       "\n",
+       "     Case Number.2 original order Unnamed: 22 Unnamed: 23  \n",
+       "5474  1959.01.17.b           2105         NaN         NaN  \n",
+       "5475    2004.12.16           4598         NaN         NaN  \n",
+       "5476    2004.12.16           4598         NaN         NaN  \n",
+       "5477    2004.07.10           4560         NaN         NaN  \n",
+       "5478    2004.07.10           4560         NaN         NaN  \n",
+       "\n",
+       "[5 rows x 24 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "def quitarDuplicados(fdf, col, regex):\n",
+    "    aux_fdf = fdf.copy()\n",
+    "    for e in fdf[col].fillna(\"UNKNOWN\"):\n",
+    "        if re.search(regex, e):\n",
+    "            r = re.findall(regex, e)\n",
+    "            for i in r[0]:\n",
+    "                aux_fdf = pd.concat([aux_fdf.copy(), aux_fdf[aux_fdf[col]==e].copy()], ignore_index = True)\n",
+    "                aux_fdf[col][aux_fdf.index.max()] = i\n",
+    "            aux_fdf = aux_fdf[aux_fdf[col]!=e].copy()\n",
+    "    return aux_fdf.copy()\n",
+    "        \n",
+    "        \n",
+    "print(df.shape)    \n",
+    "df = quitarDuplicados(df.copy(), \"Species\", \"([\\d\\.]+')\\s&\\s([\\d\\.]+')\").copy()\n",
+    "print(df.shape)\n",
+    "df = quitarDuplicados(df.copy(), \"Species\", \"([\\d\\.]+\\sm)\\s&\\s([\\d\\.]+\\sm)\").copy()\n",
+    "print(df.shape)\n",
+    "display(df.iloc[-5:])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como se observa, antes de aplicar la función, el dataframe tenía 5473 filas y después 5478. Es decir hemos agregado (*10 filas nuevas - 5 filas eliminadas*) **5 filas nuevas**.\n",
+    "\n",
+    "Las últimas filas mostradas están duplicadas a excepción de los tamaños, que son los que estaban recogidos anteriormente, es decir:\n",
+    "\n",
+    "<pre>\n",
+    "Two sharks seen in vicinity: 2.4 m & 4.25 m  [8' & 14'] TL\n",
+    "Said to involve 2 sharks: 5.2 m & 6 m [17' & 20']\n",
+    "<b style=\"color:red;\">4.5 m</b> & <b style=\"color:red;\">5 m</b> white shark\n",
+    "2 scalloped hammerhead sharks, 1.5 m & 1.8 m [5' & 6']\n",
+    "2 sharks, <b style=\"color:red;\">4.5 m</b> & <b style=\"color:red;\">3 m</b>\n",
+    "</pre>\n",
+    "\n",
+    "A continuación, limpiamos la columna `Species` para quedarnos solo con los tamaños. Para ello, creo una nueva columna que llamaremos `Sizes` donde guardaremos los datos limpios.\n",
+    "\n",
+    "La columna la limpieza a través de una función y mediante *regex*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A continuación, limpiamos"
    ]
   },
   {
