overall cleaning - Shark species

--- a/module-1/pandas-project/your-code/Shark-project.ipynb
+++ b/module-1/pandas-project/your-code/Shark-project.ipynb
@@ -772,7 +772,9 @@
   {
    "cell_type": "code",
    "execution_count": 266,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "ename": "KeyError",
@@ -818,7 +820,9 @@
   {
    "cell_type": "code",
    "execution_count": 265,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
