--- a/module-1/pandas-project/your-code/clean-database.ipynb
+++ b/module-1/pandas-project/your-code/clean-database.ipynb
@@ -7145,44 +7145,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1668, 24)\n"
+      "(1470, 24)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "Unknown    2507\n",
-       "6           227\n",
+       "Unknown    2705\n",
+       "6           226\n",
        "4           213\n",
-       "7           152\n",
-       "10          151\n",
-       "5           149\n",
-       "8           141\n",
+       "5           150\n",
+       "8           137\n",
+       "10          103\n",
+       "7            96\n",
        "12           81\n",
-       "3            80\n",
-       "13           71\n",
-       "16           65\n",
-       "9            58\n",
+       "9            56\n",
+       "13           52\n",
        "15           49\n",
-       "2            46\n",
-       "11           44\n",
+       "16           48\n",
+       "2            45\n",
+       "3            45\n",
        "14           40\n",
-       "20           33\n",
-       "18           27\n",
+       "11           39\n",
+       "18           25\n",
+       "20           24\n",
        "19           12\n",
-       "17            6\n",
+       "17            7\n",
        "1             5\n",
        "22            4\n",
-       "23            4\n",
-       "21            2\n",
+       "23            3\n",
        "197           2\n",
+       "21            2\n",
        "25            1\n",
        "59            1\n",
        "131           1\n",
@@ -7192,7 +7192,7 @@
        "Name: Sizes, dtype: int64"
       ]
      },
-     "execution_count": 237,
+     "execution_count": 303,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7205,8 +7205,8 @@
     "    tmn_oi = re.findall(\"[\\d\\.]+(?='')|[\\d\\.]+(?= '')|[\\d\\.]+(?=\\\")|[\\d\\.]+(?= \\\")\", spe)\n",
     "    tmn_f = re.findall(\"[\\d\\.]+'(?=[^'])|[\\d\\.]+'$\", spe)\n",
     "    tmn_of = re.findall(\"[\\d\\.]+(?=['][^'])\", spe)\n",
-    "    tmn_m = re.findall(\"[\\d\\.]+m|[\\d\\.]+ m\", spe)\n",
-    "    tmn_om = re.findall(\"[\\d\\.]+(?=m)|[\\d\\.]+(?= m)\", spe)\n",
+    "    tmn_m = re.findall(\"\\d[\\d\\.]+m|\\d[\\d\\.]+ m\", spe)\n",
+    "    tmn_om = re.findall(\"\\d[\\d\\.]+(?= m)|\\d+[\\d\\.]+(?=m)\", spe)\n",
     "    tmn_cm = re.findall(\"[\\d\\.]+cm|[\\d\\.]+ cm\", spe)\n",
     "    tmn_ocm = re.findall(\"[\\d\\.]+(?=cm)|[\\d\\.]+(?= cm)\", spe)\n",
     "    if \"Unknown\" in spe or not re.search(\"\\d\", spe):\n",
@@ -11920,6 +11920,76 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 306,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "      <th>IQR</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>month</th>\n",
+       "      <td>30.0</td>\n",
+       "      <td>5.433333</td>\n",
+       "      <td>4.288584</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       count      mean       std  min  25%  50%  75%   max  IQR\n",
+       "month   30.0  5.433333  4.288584  1.0  1.0  5.5  9.0  12.0  8.0"
+      ]
+     },
+     "execution_count": 306,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats = wdf[[\"Sizes\"]].describe().transpose()\n",
+    "stats['IQR'] = stats['75%'] - stats['25%']\n",
+    "stats"
+   ]
   },
   {
    "cell_type": "code",
